--- a/zerina-project.ipynb
+++ b/zerina-project.ipynb
@@ -409,7 +409,6 @@
    "outputs": [],
    "source": [
     "X = wdf.values[:-1]\n",
-    "\n",
     "y = wdf.data.values[1:]"
    ]
   },
@@ -429,10 +428,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit_lstm(trainx, trainy, batch_size=1, nb_epoch=3000, neurons=4):\n",
+    "    X, y = trainx, trainy\n",
+    "    X = X.reshape(X.shape[0], 1, X.shape[1])\n",
+    "    model = Sequential()\n",
+    "    model.add(LSTM(neurons, batch_input_shape=(batch_size, X.shape[1], X.shape[2]), stateful=True))\n",
+    "    model.add(Dense(1))\n",
+    "    model.compile(loss='mean_squared_error', optimizer='adam')\n",
+    "    for i in range(nb_epoch):\n",
+    "        model.fit(X, y, epochs=1, batch_size=batch_size, verbose=0, shuffle=False)\n",
+    "        model.reset_states()\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\je023d\\AppData\\Local\\Continuum\\anaconda3\\envs\\py36-prime\\lib\\site-packages\\tensorflow\\python\\framework\\op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n",
+      "WARNING:tensorflow:From C:\\Users\\je023d\\AppData\\Local\\Continuum\\anaconda3\\envs\\py36-prime\\lib\\site-packages\\tensorflow\\python\\ops\\math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n"
+     ]
+    }
+   ],
+   "source": [
+    "fit_lstm(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def forecast_lstm(model, batch_size=1, X):\n",
+    "    X = X.reshape(1, 1, len(X))\n",
+    "    yhat = model.predict(X, batch_size=batch_size)\n",
+    "    return yhat[0,0]"
+   ]
   },
   {
    "cell_type": "code",
