briefly annotated notebook, refactored data processing with input options, refactored data_list generation, added new downsample 10x section, added new fast get all state lengths section to return sequence of end state lengths

--- a/zerina-project.ipynb
+++ b/zerina-project.ipynb
@@ -11,27 +11,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">Author name:      Trevor Bergstrom<br>\n",
-    ">Author BEMS:      2244433<br>\n",
-    ">Created date:     2019-03-XX<br>\n",
-    ">Kernel:           Python 3.6<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## data acquisition"
+    "## setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import scipy\n",
+    "from tqdm import tqdm_notebook\n",
     "\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -41,9 +41,7 @@
     "\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
-    "from keras.layers import LSTM\n",
-    "\n",
-    "from tqdm import tqdm_notebook"
+    "from keras.layers import LSTM"
    ]
   },
   {
@@ -61,8 +59,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### read csv and preprocess"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -203,30 +208,39 @@
        "9  103643.0     456  12000000.0     38.0  103681.0    2237.0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "tar_file = r'data/wifitrafficstats2.csv'\n",
+    "#tar_file = r'data/wifitrafficstats3.csv'\n",
+    "#tar_file = r'data/wifitrafficstats4.csv'\n",
+    "#tar_file = r'data/wifitrafficstats5.csv'\n",
+    "#tar_file = r'data/wifitrafficstats6.csv'\n",
+    "\n",
     "df = (\n",
     "    pd\n",
-    "    .read_csv('data/wifitrafficstats2.csv')\n",
+    "    .read_csv(tar_file)\n",
     "    .rename({ \n",
     "        'Time':'time', \n",
     "        'Length':'length', \n",
     "        'TX Rate':'rate'\n",
     "    }, axis=1)\n",
-    "    .drop(['No.','Delta Time'], axis=1)\n",
     "    .eval('time = time * 1e6')\n",
-    "    .eval('rate = rate*1e6')\n",
-    "    .eval('length = length*8')\n",
+    "    .eval('rate = rate * 1e6')\n",
+    "    .eval('length = length * 8')\n",
     "    .eval('on_time = 1e6 * length / rate')\n",
     "    .eval('end_time = time + on_time')\n",
-    "    .assign(shift_time = lambda x: x.end_time.shift(1))\n",
-    "    .eval('off_time = time - shift_time')\n",
-    "    .assign(off_time = lambda x: [time if time > 0 else 0 for time in x.off_time])\n",
-    "    .drop(['shift_time'], axis=1)\n",
+    "    .assign(\n",
+    "        shift_time = lambda x: x.end_time.shift(1),\n",
+    "        off_time = lambda x: [\n",
+    "            (time - shift_time) \n",
+    "                if (time - shift_time) > 0 else 0 \n",
+    "            for time, shift_time in (zip(x.time, x.shift_time))\n",
+    "    ])\n",
+    "    .drop(['No.','Delta Time','shift_time'], axis=1)\n",
     "    .round(0)\n",
     ")\n",
     "\n",
@@ -236,19 +250,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### generate data list of `1`'s and `0`'s"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97b1a9cd49d14a2c9e6f767de3720ddc",
+       "model_id": "3199ef8fb42a414ea45bebc1b1062c61",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=5311), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=5310), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -263,6 +284,7 @@
     }
    ],
    "source": [
+    "# simpler way\n",
     "data_list = []\n",
     "\n",
     "for row in tqdm_notebook(df[['on_time','off_time']].iloc[1:].itertuples(), total=df.shape[0]-1):\n",
@@ -272,18 +294,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39c3facd79b14700bc7ca2b61f3f0b8a",
+       "model_id": "f2d398deae9c43f2b080c83d952bc4f7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=40431970), HTML(value='')))"
+       "HBox(children=(IntProgress(value=0, max=5310), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this method is unncessary complicated, but it runs twice as fast..\n",
+    "data_list = [\n",
+    "    item for sublist in\n",
+    "    [\n",
+    "        [1 for i in range(int(row.on_time))] + [0 for i in range(int(row.off_time))]\n",
+    "        for row in tqdm_notebook(\n",
+    "            df[['on_time','off_time']].iloc[1:].itertuples(), \n",
+    "            total=df.shape[0]-1\n",
+    "        )\n",
+    "    ]\n",
+    "    for item in sublist\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### downsample 10x\n",
+    "\n",
+    "note: investigate `scipy.signal.decimate` and `scipy.signal.resample`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reshape into rows of 10, take mean of each row to create new array\n",
+    "down_sample_factor = 10\n",
+    "\n",
+    "data_list_down10 = (\n",
+    "    data_list\n",
+    "    .reshape(-1, down_sample_factor)\n",
+    "    .mean(axis=1, dtype='int')\n",
+    ")\n",
+    "\n",
+    "assert len(data_list) / len(data_list_down10) == down_sample_factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### create state length feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b0926a2177264282b9a801d7af0a2682",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=4043197), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -302,7 +414,7 @@
     "same_state_count = 0\n",
     "running_total = []\n",
     "\n",
-    "for val in tqdm_notebook(data_list):    \n",
+    "for val in tqdm_notebook(data_list_down10):    \n",
     "    \n",
     "    # if same\n",
     "    if (val - prev) == 0:\n",
@@ -320,8 +432,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### fast get all state lengths"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1,   1, 228, 210,   1,   5,   3,   3,   1,   1,   1,  21, 109,\n",
+       "        62, 230,   2,   1,  30,  31, 109], dtype=int64)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 66.2 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "data_list = np.array(data_list_down10)\n",
+    "\n",
+    "state_lengths = np.diff(\n",
+    "    np.where(\n",
+    "        np.concatenate(\n",
+    "            ([data_list[0]],\n",
+    "             data_list[:-1] != data_list[1:],\n",
+    "             [0]\n",
+    "            )\n",
+    "        )\n",
+    "    )[0]\n",
+    ")[::2]\n",
+    "\n",
+    "display(state_lengths[:20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### final processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -357,23 +531,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -382,20 +556,21 @@
       "text/plain": [
        "   data  running\n",
        "0     1        1\n",
-       "1     1        2\n",
-       "2     1        3\n",
-       "3     1        4\n",
-       "4     1        5"
+       "1     0        0\n",
+       "2     0        1\n",
+       "3     0        2\n",
+       "4     0        3"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "wdf = pd.DataFrame({\n",
-    "    'data':data_list,\n",
+    "    #'data':data_list,\n",
+    "    'data':data_list_down10,\n",
     "    'running':running_total\n",
     "})\n",
     "\n",
@@ -404,12 +579,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = wdf.values[:-1]\n",
     "y = wdf.data.values[1:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### dev"
    ]
   },
   {
@@ -427,8 +609,22 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### fit lstm"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +660,7 @@
     }
    ],
    "source": [
-    "fit_lstm(X, y)"
+    "%time fit_lstm(X, y)"
    ]
   },
   {
@@ -473,6 +669,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### forecast one step"
+   ]
   },
   {
    "cell_type": "code",
@@ -506,24 +709,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaler = MinMaxScaler()\n",
-    "\n",
-    "pipeline = make_pipeline(scaler, )"
-   ]
   },
   {
    "cell_type": "code",
