--- a/markov-dev.ipynb
+++ b/markov-dev.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -85,8 +85,8 @@
        "      <th></th>\n",
        "      <th>OnOn</th>\n",
        "      <th>OnOff</th>\n",
-       "      <th>OffOff</th>\n",
        "      <th>OffOn</th>\n",
+       "      <th>OffOff</th>\n",
        "      <th>timestep</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -136,7 +136,7 @@
        "</div>"
       ],
       "text/plain": [
-       "      OnOn     OnOff   OffOff     OffOn  timestep\n",
+       "      OnOn     OnOff    OffOn    OffOff  timestep\n",
        "0  0.99546  0.004543  0.99759  0.002411         1\n",
        "1  0.95586  0.044138  0.97432  0.025682        11\n",
        "2  0.93161  0.068395  0.95648  0.043521        21\n",
@@ -144,7 +144,7 @@
        "4  0.91697  0.083027  0.94044  0.059557        41"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
     "    pd\n",
     "    .read_csv(\n",
     "        tmat_file, \n",
-    "        names=['OnOn','OnOff','OffOff','OffOn','timestep']\n",
+    "        names=['OnOn','OnOff','OffOn','OffOff','timestep']\n",
     "    )\n",
     ")\n",
     "\n",
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -539,8 +539,8 @@
        "      <th></th>\n",
        "      <th>OnOn</th>\n",
        "      <th>OnOff</th>\n",
-       "      <th>OffOff</th>\n",
        "      <th>OffOn</th>\n",
+       "      <th>OffOff</th>\n",
        "      <th>timestep</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -561,113 +561,355 @@
        "      <td>0.025682</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.93161</td>\n",
+       "      <td>0.068395</td>\n",
+       "      <td>0.95648</td>\n",
+       "      <td>0.043521</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.90886</td>\n",
+       "      <td>0.091141</td>\n",
+       "      <td>0.93722</td>\n",
+       "      <td>0.062781</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.91697</td>\n",
+       "      <td>0.083027</td>\n",
+       "      <td>0.94044</td>\n",
+       "      <td>0.059557</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.92212</td>\n",
+       "      <td>0.077881</td>\n",
+       "      <td>0.93829</td>\n",
+       "      <td>0.061707</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.91660</td>\n",
+       "      <td>0.083397</td>\n",
+       "      <td>0.93454</td>\n",
+       "      <td>0.065464</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.92258</td>\n",
+       "      <td>0.077424</td>\n",
+       "      <td>0.93584</td>\n",
+       "      <td>0.064161</td>\n",
+       "      <td>71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.92533</td>\n",
+       "      <td>0.074671</td>\n",
+       "      <td>0.93160</td>\n",
+       "      <td>0.068395</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.92370</td>\n",
+       "      <td>0.076300</td>\n",
+       "      <td>0.92595</td>\n",
+       "      <td>0.074054</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      OnOn     OnOff   OffOff     OffOn  timestep\n",
+       "      OnOn     OnOff    OffOn    OffOff  timestep\n",
        "0  0.99546  0.004543  0.99759  0.002411         1\n",
-       "1  0.95586  0.044138  0.97432  0.025682        11"
+       "1  0.95586  0.044138  0.97432  0.025682        11\n",
+       "2  0.93161  0.068395  0.95648  0.043521        21\n",
+       "3  0.90886  0.091141  0.93722  0.062781        31\n",
+       "4  0.91697  0.083027  0.94044  0.059557        41\n",
+       "5  0.92212  0.077881  0.93829  0.061707        51\n",
+       "6  0.91660  0.083397  0.93454  0.065464        61\n",
+       "7  0.92258  0.077424  0.93584  0.064161        71\n",
+       "8  0.92533  0.074671  0.93160  0.068395        81\n",
+       "9  0.92370  0.076300  0.92595  0.074054        91"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tmat_df.head(2)"
+    "tmat_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_bit(p):\n",
-    "    return np.random.binomial(1, p)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "length = 100000\n",
-    "curr_state = 'OnOn'\n",
-    "old_bit = 1\n",
-    "sim_data = []\n",
+    "def generate_sim_data(length, tmat_df):\n",
+    "    '''\n",
+    "    takes a transition matrix and generates a simulated signal\n",
+    "    of size <length>\n",
+    "    '''\n",
+    "    \n",
+    "    def generate_bit(p):\n",
+    "        return np.random.binomial(1, p)\n",
     "\n",
-    "for i in tnrange(length):\n",
-    "    new_bit = generate_bit(tmat_df.loc[0, curr_state])\n",
-    "    sim_data.append(new_bit)\n",
+    "\n",
+    "    curr_state = 'OffOff'\n",
+    "    old_bit = 0\n",
+    "    sim_data = []\n",
     "    \n",
-    "    # if 1\n",
-    "    if new_bit == 1:\n",
-    "        # if 1 -> 1\n",
-    "        if (new_bit - old_bit) == 0:\n",
-    "            curr_state = 'OnOn'\n",
+    "    for i in range(length):\n",
+    "        new_bit = generate_bit(tmat_df.loc[5, curr_state])\n",
+    "        sim_data.append(new_bit)\n",
     "        \n",
-    "        # if 1 -> 0\n",
-    "        else:\n",
-    "            curr_state = 'OnOff'\n",
-    "    \n",
-    "    # if 0\n",
-    "    else:\n",
-    "        # if 0 -> 0\n",
-    "        if (new_bit - old_bit) == 0:\n",
-    "            curr_state = 'OffOff'\n",
-    "        \n",
-    "        # if 0 -> 1\n",
-    "        else:\n",
-    "            curr_state = 'OffOn'\n",
+    "        # if 1\n",
+    "        if new_bit == 1:\n",
+    "            # if 1 -> 1\n",
+    "            if (new_bit - old_bit) == 0:\n",
+    "                curr_state = 'OnOn'\n",
     "            \n",
-    "    old_bit = new_bit\n",
-    "            "
+    "            # if 1 -> 0\n",
+    "            else:\n",
+    "                curr_state = 'OnOff'\n",
+    "        \n",
+    "        # if 0\n",
+    "        else:\n",
+    "            # if 0 -> 0\n",
+    "            if (new_bit - old_bit) == 0:\n",
+    "                curr_state = 'OffOff'\n",
+    "            \n",
+    "            # if 0 -> 1\n",
+    "            else:\n",
+    "                curr_state = 'OffOn'\n",
+    "                \n",
+    "        old_bit = new_bit\n",
+    "        \n",
+    "    return np.array(sim_data)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### execution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "51553"
+       "(100, 100000)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sum(sim_data)"
+    "trials = 100\n",
+    "length = 100000\n",
+    "\n",
+    "sim_matrix = np.zeros((trials, length))\n",
+    "sim_matrix.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7e4ddf528b1c4410b64a9eb14b231492",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "for i in tnrange(trials):\n",
+    "    sim_matrix[i,:] = generate_sim_data(length, tmat_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = (sim_matrix.sum(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100000"
+       "0.4984239"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(sim_data)"
+    "np.mean(stats) / length"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "618.195549886927"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(get_state_length_list(sim_matrix[0,:]))[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "old_stats = (sim_matrix.sum(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4978825"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(old_stats) / length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1669.2903784243172"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(old_stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -708,7 +950,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.5"
-  }
+  },
+  "toc-autonumbering": false
  },
  "nbformat": 4,
  "nbformat_minor": 2
