successfully tested neew cycle iterator, substantial performance boost

--- a/markov-dev.ipynb
+++ b/markov-dev.ipynb
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +589,7 @@
     "    }\n",
     "    \n",
     "    global p\n",
-    "    p = 1\n",
+    "    p = 0.5\n",
     "    sim_data = [1,1,1]  \n",
     "    \n",
     "    def cycle_states():\n",
@@ -599,60 +599,24 @@
     "        global p\n",
     "        \n",
     "        if n == 0:\n",
-    "            print(p)\n",
+    "            #print(f'n == {n}, {p}')\n",
     "            return np.random.binomial(1, p)\n",
     "            \n",
     "        else:\n",
     "            for i in range(n):\n",
     "                p = cycle_states()\n",
-    "            \n",
-    "            print(p)\n",
+    "\n",
+    "            #print(f'n == {n}, {p}')\n",
     "            return np.random.binomial(1, p)\n",
     "        \n",
-    "    for i in range(n_samples+3):        \n",
-    "        new_bit = generate_bit(cycle_dict[sim_data[-3:]])        \n",
+    "    \n",
+    "    for i in range(n_samples):        \n",
+    "        new_bit = generate_bit(cycle_dict[tuple(sim_data[-3:])])        \n",
     "        sim_data.append(new_bit)        \n",
     "        \n",
     "    return np.array(sim_data[3:])\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transition_matrix = tmat_df.iloc[0,:4].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -663,59 +627,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "transition probabilities: [0.99546   0.0045434 0.0024107 0.99759  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_size = 100000\n",
+    "transition_matrix = tmat_df.iloc[0,:4].values\n",
+    "print(f'transition probabilities: {transition_matrix}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 304 ms, sys: 7.99 ms, total: 312 ms\n",
+      "Wall time: 306 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time sim_data = generate_sim_data(100000, transition_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(100, 100000)"
+       "100000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trials = 100\n",
-    "length = 100000\n",
-    "\n",
-    "sim_matrix = np.zeros((trials, length))\n",
-    "sim_matrix.shape"
+    "len(sim_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "420fb6c278544461bed2db66cc22be3e",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "HBox(children=(IntProgress(value=0), HTML(value='')))"
+       "46461"
       ]
      },
+     "execution_count": 179,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in tnrange(trials):\n",
-    "    sim_matrix[i,:] = generate_sim_data(length, tmat_df)"
+    "sim_data.sum()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
